--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "material-design-lite": "^1.3.0",
+    "bootstrap": "4.1.0",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "sort-by": "^1.2.0",
     "uuid": "^3.2.1"
   },
   "scripts": {
