--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "private": true,
   "dependencies": {
     "bootstrap": "4.1.0",
+    "npm": "^6.0.1",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.2.0",
     "sort-by": "^1.2.0",
     "uuid": "^3.2.1"
   },
